# climate-impacts-mcp

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  pyproject.toml
docs/: api-mapping.md
gcp/: log_metrics.sh
src/climate_impacts_mcp/: __init__.py  __main__.py  boundaries.py  client.py  formatting.py  logging.py  models.py  server.py
src/climate_impacts_mcp/tools/: geodata.py  metadata.py  overview.py  timeseries.py  validation.py
tests/: conftest.py  test_boundaries.py  test_client.py  test_formatting.py  test_logging.py  test_tools.py  test_validation.py
