[tool.poetry]
name = "climate-impacts-mcp"
version = "0.1.0"
description = "MCP server exposing the CIE API v2 (Climate Impact Explorer) for LLM consumption"
authors = ["Valentin Lemaire"]
readme = "README.md"
packages = [{include = "climate_impacts_mcp", from = "src"}]

[tool.poetry.scripts]
climate-impacts-mcp = "climate_impacts_mcp.server:main"

[tool.poetry.dependencies]
python = "^3.11"
mcp = {extras = ["cli"], version = "^1.0"}
httpx = "^0.28"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.25"
respx = "^0.22"
ruff = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
